implement refactor of pipelines and branches so that each branch can be assigned views from arbitrary pipelines

--- a/tests/train/conf/byol_conf.yaml
+++ b/tests/train/conf/byol_conf.yaml
@@ -25,6 +25,7 @@ model:
   branches:
     0:
       name: Branch
+      pipelines: ["0"]
       stages:
         stop_gradient: False
         body:
@@ -58,6 +59,7 @@ model:
 
     1:
       name: Branch
+      pipelines: ["1"]
       stages:
         stop_gradient: True
         body:
