--- a/tests/train/conf/dino_conf.yaml
+++ b/tests/train/conf/dino_conf.yaml
@@ -115,7 +115,7 @@ schedulers:
   branches:
     0:
       learning_rate:
-        name: BYOL
+        name: BYOLlr
         params:
           # note that learning rate scales w/ number of epochs see deepmind implementation
           base_learning_rate: 0.2
