--- a/tests/train/conf/cpu_conf_pretrained.yaml
+++ b/tests/train/conf/cpu_conf_pretrained.yaml
@@ -79,7 +79,9 @@ model:
             batch_norm_params: {}
             activation_name: "relu"
 
-loss: byol_regression_loss
+loss:
+  name: byol_regression_loss
+  params: {}
 
 optimizers:
   branches:
@@ -121,6 +123,7 @@ meter:
   name: SSLMeter
 
 pipelines:
+  flatten: True
   pre:
     augmentations:
         Identity:
@@ -138,9 +141,10 @@ pipelines:
           params:
             prob: 1.0
 
-dataloader:
-  platform: torch
-  name: MNIST
+data:
+  name: Base
   params:
-    batch_size: 32
-    num_shards: 8
+    dataset_name: "mnist"
+    batch_size: 40
+    data_dtype_str: "float32"
+    dataset_configs: {}
