--- a/tests/train/conf/cpu_conf_dynamic_scaling.yaml
+++ b/tests/train/conf/cpu_conf_dynamic_scaling.yaml
@@ -78,7 +78,9 @@ model:
             activation_name: "relu"
 
 
-loss: byol_regression_loss
+loss:
+  name: byol_regression_loss
+  params: {}
 
 optimizers:
   branches:
@@ -120,6 +122,7 @@ meter:
   name: SSLMeter
 
 pipelines:
+  flatten: True
   pre:
     augmentations:
       Identity:
@@ -137,10 +140,10 @@ pipelines:
           params:
             prob: 1.0
 
-dataloader:
-  platform: torch
-  name: MNIST
+data:
+  name: Base
   params:
-    batch_size: 32
-    input_shape: (784,)
-    flatten: True
+    dataset_name: "mnist"
+    batch_size: 40
+    data_dtype_str: "float32"
+    dataset_configs: {}
