--- a/tests/train/conf/mocov3_conf.yaml
+++ b/tests/train/conf/mocov3_conf.yaml
@@ -263,7 +263,10 @@ pipelines:
             x_min: 0
             x_max: 1
 
-dataloader:
-  name: CIFAR10
+data:
+  name: Base
   params:
+    dataset_name: "mnist"
     batch_size: 4096
+    data_dtype_str: "float32"
+    dataset_configs: {}
