--- a/tests/train/conf/byol_test.yaml
+++ b/tests/train/conf/byol_test.yaml
@@ -80,7 +80,7 @@ model:
             dtype: "float32"
 
 loss:
-  name: byol_regression_loss
+  name: cosine_similarity
   params: {}
 
 optimizers:
