--- a/tests/train/conf/base_cpu_test.yaml
+++ b/tests/train/conf/base_cpu_test.yaml
@@ -2,8 +2,7 @@ env:
   seed: 1337
   numpy_seed: 1337
   jax_seed: 1337
-  epochs: 11
-  accum_steps: 8
+  epochs: 3
   save_checkpoint:
     params:
       ckpt_dir: "outs/checkpoints/"
@@ -82,7 +81,7 @@ model:
             dtype: "float32"
 
 loss:
-  name: byol_regression_loss
+  name: cosine_similarity
   params: {}
 
 optimizers:
