--- a/tests/train/conf/pretrained_test.yaml
+++ b/tests/train/conf/pretrained_test.yaml
@@ -84,7 +84,7 @@ model:
             dtype: "float32"
 
 loss:
-  name: byol_regression_loss
+  name: cosine_similarity
   params: {}
 
 optimizers:
