--- a/tests/train/conf/byol_test.yaml
+++ b/tests/train/conf/byol_test.yaml
@@ -3,7 +3,6 @@ env:
   numpy_seed: 1337
   jax_seed: 1337
   epochs: 2
-  accum_steps: 1
   save_checkpoint:
     params:
       ckpt_dir: "outs/checkpoints/"
@@ -88,7 +87,6 @@ optimizers:
     0:
       name: lars
       params:
-        # TODO: check that this should be momentum (comes from deepmind's \beta)
         momentum: 0.9
         trust_coefficient: 1e-3
         weight_decay: 1.5e-6
@@ -99,7 +97,7 @@ schedulers:
   branches:
     0:
       learning_rate:
-        name: BYOLlr
+        name: byol_lr_schedule
         params:
           # lr = 0.2 * batchsize/256
           base_learning_rate: 0.2
@@ -110,12 +108,11 @@ schedulers:
   post_process:
     0:
       tau:
-        name: BYOLema
+        name: byol_ema_schedule
         params:
           # TODO: why is this max_steps and total_steps above (inherit this weirdness from DM implementation)
           base_ema: .996
           max_steps: 100000
-
 
 post_process:
   funcs:
